<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ls="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/etName"
                android:maxLines="1"
                android:hint="Name"
                android:inputType="textCapWords"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:maxLength="40"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/etMobile"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="14"
                android:hint="Mobile Number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:maxLength="45"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/etPassword"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:maxLength="35"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/etAddress"
                android:hint="@string/signup_addresshint"
                android:maxLines="1"
                android:maxLength="60"
               />
        </com.google.android.material.textfield.TextInputLayout>

        <fr.ganfra.materialspinner.MaterialSpinner
            style="@style/spinnerUserType"
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_multiline="false"
app:ms_enableFloatingLabel="true"
            app:ms_enableErrorLabel="false"
            app:ms_hint="Select User Type"
            app:ms_hint_color="@color/colorAccent"
            app:ms_hintTextSize="12sp"

            app:ms_arrowSize="16dp"
            app:ms_alignLabels="false"
            app:ms_floatingLabelText="User Type"
            app:ms_floatingLabelColor="@color/colorAccent"
                    app:ms_baseColor="@color/colorAccent"
            app:ms_hintColor="@color/colorPrimary"
        app:ms_arrowColor="@color/colorAccent"/>


<!--            app_ms_dropDownHintView="@layout/my_custom_dropdown_hint_item_layout"-->
<!--            app_ms_hintView="@layout/my_custom_hint_item_layout"-->
<!--            app_ms_baseColor="@color/base"-->
<!--            app_ms_highlightColor="@color/highlight"-->
<!--            app_ms_errorColor="@color/error"-->
<!--            app_ms_typeface="typeface.ttf"-->
<!--            app_ms_thickness="2dp"-->
<!--            app_ms_hintColor="@color/hint"-->
<!--            app_ms_arrowColor="@color/arrow"-->
<!--            app_ms_arrowSize="16dp"-->
<!--            app_ms_alignLabels="false"-->
<!--            app_ms_floatingLabelColor="@color/floating_label"-->

        <Button
            style="@style/loginButton"
            android:id="@+id/btnRegister"
            android:layout_gravity="center"
            android:text="Register"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvsignin"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
