<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="authViewModel"
            type="com.tiff.tiffinbox.authentication.viewModel.AuthViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ui.Register">

    <RelativeLayout
        android:orientation="vertical"
        style="@style/loginParent"
       >
        <ScrollView
            style="@style/parent">

            <RelativeLayout
                style="@style/parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:weightSum="12">

                    <LinearLayout
                        style="@style/parent"
                        android:background="@drawable/login_shape_bk"
                        android:orientation="vertical"
                        android:layout_weight="3">

                        <ImageView
                            style="@style/parent"
                            android:background="@drawable/ic_login_bk"
                            android:contentDescription="login background" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">

                    <TextView
                        style="@style/headerText"
                        android:layout_gravity="center"
                        android:text="Tiffin Box"
                        android:layout_marginTop="40dp"/>
<!--                    <include-->
<!--                        layout="@layout/layout_register"/>-->

                    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        xmlns:ls="http://schemas.android.com/tools"
                        style="@style/loginCard"
                        app:cardCornerRadius="@dimen/loginCardRadius"
                        android:elevation="5dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:background="@color/whiteCardColor">

                        <LinearLayout
                            style="@style/linearParent"
                            android:layout_gravity="center"
                            android:padding="@dimen/loginViewsMargin">

                            <TextView
                                style="@style/headerTextPrimary"
                                android:text="@string/register"
                                android:layout_marginTop="@dimen/loginViewsMargin"/>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top">
                                <EditText
                                    style="@style/modifiedEditText"
                                    android:id="@+id/etName"
                                    android:maxLines="1"
                                    android:hint="Name"
                                    android:text="@={authViewModel.user.name}"
                                    android:inputType="textCapWords"
                                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                                    android:maxLength="40"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top">
                                <EditText
                                    style="@style/modifiedEditText"
                                    android:id="@+id/etMobile"
                                    android:inputType="phone"
                                    android:maxLines="1"
                                    android:maxLength="14"
                                    android:text="@={authViewModel.user.mobile}"
                                    android:hint="Mobile Number"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top">
                                <EditText
                                    style="@style/modifiedEditText"
                                    android:id="@+id/etEmail"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:maxLength="45"
                                    android:text="@={authViewModel.user.email}"
                                    android:hint="@string/login_email_hint"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top">
                                <EditText
                                    style="@style/modifiedEditText"
                                    android:id="@+id/etPassword"
                                    android:hint="@string/login_password_hint"
                                    android:maxLines="1"
                                    android:maxLength="35"
                                    android:text="@={authViewModel.user.password}"
                                    android:inputType="textPassword"/>
                            </com.google.android.material.textfield.TextInputLayout>
                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top">
                                <EditText
                                    style="@style/modifiedEditText"
                                    android:id="@+id/etAddress"
                                    android:hint="@string/signup_addresshint"
                                    android:maxLines="1"
                                    android:text="@={authViewModel.user.address}"
                                    android:maxLength="60"
                                    />
                            </com.google.android.material.textfield.TextInputLayout>

                            <fr.ganfra.materialspinner.MaterialSpinner
                                style="@style/spinnerUserType"
                                android:id="@+id/spinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:ms_multiline="false"
                                app:ms_enableFloatingLabel="true"
                                app:ms_enableErrorLabel="false"
                                app:ms_hint="Select User Type"
                                app:ms_hint_color="@color/colorAccent"
                                app:ms_hintTextSize="12sp"

                                app:ms_arrowSize="16dp"
                                app:ms_alignLabels="false"
                                app:ms_floatingLabelText="User Type"
                                app:ms_floatingLabelColor="@color/colorAccent"
                                app:ms_baseColor="@color/colorAccent"
                                app:ms_hintColor="@color/colorPrimary"
                                app:ms_arrowColor="@color/colorAccent"/>


                            <!--            app_ms_dropDownHintView="@layout/my_custom_dropdown_hint_item_layout"-->
                            <!--            app_ms_hintView="@layout/my_custom_hint_item_layout"-->
                            <!--            app_ms_baseColor="@color/base"-->
                            <!--            app_ms_highlightColor="@color/highlight"-->
                            <!--            app_ms_errorColor="@color/error"-->
                            <!--            app_ms_typeface="typeface.ttf"-->
                            <!--            app_ms_thickness="2dp"-->
                            <!--            app_ms_hintColor="@color/hint"-->
                            <!--            app_ms_arrowColor="@color/arrow"-->
                            <!--            app_ms_arrowSize="16dp"-->
                            <!--            app_ms_alignLabels="false"-->
                            <!--            app_ms_floatingLabelColor="@color/floating_label"-->

                            <Button
                                style="@style/loginButton"
                                android:id="@+id/btnRegister"
                                android:layout_gravity="center"
                                android:text="Register"
                                android:layout_marginTop="10dp"/>

                            <TextView
                                android:id="@+id/tvsignin"
                                style="@style/parent"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textColor="@color/primaryTextColor"
                                android:text="@string/signup_login_hint"
                                android:layout_marginTop="@dimen/loginViewsMargin"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
<!--                <ImageView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentLeft="true"-->
<!--                    android:layout_alignParentTop="true"-->
<!--                    android:layout_marginTop="30dp"-->
<!--                    android:layout_marginLeft="10dp"-->
<!--                    android:src="@android:drawable/ic_menu_close_clear_cancel" />-->
            </RelativeLayout>

        </ScrollView>
        <ProgressBar
            android:id="@+id/progressBar_cyclic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:theme="@style/Progressbar.color"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>