<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Seller.AddSeller">

    <LinearLayout
        style="@style/parent"
        android:background="@drawable/login_shape_bk"
        android:orientation="vertical"
        android:layout_weight="3">

        <ImageView
            style="@style/parent"
            android:background="@drawable/ic_login_bk"
            android:contentDescription="login background" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvHeader"
        style="@style/headerText"
        android:layout_gravity="center_horizontal"
        android:text="Add Recipe"
        android:textColor="@color/whiteTextColor"
        android:layout_marginTop="40dp"/>
    <ScrollView
        style="@style/parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="684dp"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivUploadimg"
            android:layout_width="86dp"
            android:layout_height="67dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="170dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="170dp"
            android:elevation="7dp"
            android:src="@drawable/ic_photo_camera_black_24dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAdd"
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_alignParentRight="true"

            android:layout_marginTop="94dp"
            android:layout_marginEnd="30dp"
            android:elevation="2dp"
            app:cardCornerRadius="@dimen/loginCardRadius"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSellerTitle"
                android:layout_width="230dp"
                android:layout_height="85dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/whiteCardColor"
                android:elevation="2dp"
                app:cardCornerRadius="@dimen/loginCardRadius"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false"
                app:layout_constraintStart_toStartOf="parent">
                 <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <EditText
                        android:id="@+id/etSellerTitle"
                        style="@style/modifiedEditText"
                        android:hint="@string/titleSeller"
                        android:inputType="text"
                        android:maxLength="45"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
            android:id="@+id/cvSellerPrice"
            android:layout_width="230dp"
            android:layout_height="85dp"
            android:layout_marginTop="145dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/whiteCardColor"
            android:elevation="2dp"
            app:cardCornerRadius="@dimen/loginCardRadius"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">
                <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/etSellerPrice"
                    style="@style/modifiedEditText"
                    android:hint="@string/priceSeller"
                    android:inputType="text"
                    android:maxLength="35"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSellerDesc"
                android:layout_width="230dp"
                android:layout_height="85dp"
                android:layout_marginTop="260dp"
                android:background="@color/whiteCardColor"
                android:layout_gravity="center_horizontal"
                android:elevation="2dp"
                app:cardCornerRadius="@dimen/loginCardRadius"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/etSellerDescription"
                        style="@style/modifiedEditText"
                        android:hint="@string/descSeller"
                        android:inputType="text"
                        android:maxLength="120"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnAdd"
            style="@style/loginButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="110dp"
            android:layout_marginTop="468dp"
            android:layout_marginEnd="110dp"
            android:text="Add" />
    </RelativeLayout>
    </ScrollView>
</FrameLayout>